# opengl-render

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  orange.cpp  picture.cpp
